2009-11-06  Lin Ma  <Lin.Ma@Sun.COM>

	* configure.in:
	  Bump to 0.99.95 - for RC5 respin

2009-11-06  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/main.c (main):
	* daemon/main.c (main):
	Fixed l10n issue.
	* common/nwamui_daemon.c (nwamui_daemon_class_init),
	(nwamui_daemon_init), (nwamui_daemon_set_status),
	(nwamd_event_handler), (nwamui_daemon_update_status),
	(nwamui_daemon_handle_object_action_event):
	Minor update. Filter out NoNet when set daemon statue.
	* common/nwamui_ncp.c (nwamui_ncp_get_ncu_by_device_name):
	Update find ncu debug info.
	* common/nwamui_ncu.c:
	Minor update.
	* daemon/Makefile.am:
	Remove useless line.
	* daemon/status_icon.c (daemon_active_ncp_changed),
	(initial_notify_nwam_object):
	Show NCU info on startup.

2009-11-05  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/nwam_net_conf_panel.c (nwam_connection_cell_func):
	Fixed 12083 nwam icon shows connected status for disabled connection.
	* common/nwamui_daemon.c
	(nwamui_daemon_handle_object_action_event), (nwam_ncp_walker_cb):
	Rework object_action
	* common/nwamui_ncp.c (nwamui_ncp_class_init):
	* common/nwamui_ncp.h:
	Uses _reload vfun
	* daemon/nwam-menu.c (nwam_menu_real_remove),
	(nwam_menu_real_insert):
	Enable debug log
	* daemon/status_icon.c (nwam_menu_recreate_ncu_menuitems):
	Remove useless code.

2009-11-05  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/nwam_wireless_chooser.c (nwam_rescan_wifi):
	Remove useless code.
	* common/nwamui_daemon.c
	(nwamui_daemon_handle_object_action_event),
	(nwamui_daemon_nwam_connect), (nwam_loc_walker_cb),
	(nwam_enm_walker_cb), (nwam_ncp_walker_cb):
	Move ncu add/remove code from Link_Action to Object_Action, because
	I never seen Link_Action signals.
	Fixed some mem leak.
	* common/nwamui_ncp.c (nwamui_ncp_set_property),
	(nwamui_ncp_is_modifiable):
	Fixed a nit.
	* daemon/nwam-menu.c:
	* daemon/nwam-menu.h:
	Fixed sometimes the parent of menu-item to be removed doesn't match
	to the passed parent, especially for the sub-menu children.
